bugfix/design: fixed wrong spacing from left and right side for all components with fixed positioning in LastBlogposts

--- a/src/style/blog.less
+++ b/src/style/blog.less
@@ -20,6 +20,7 @@
 
 h1.blog.header {
 	margin: 0;
+	padding: 0;
 	position: fixed;
 	top: @margin-md;
 	left: @margin-lg;
@@ -28,6 +29,7 @@ h1.blog.header {
 
 h1.blog.progress.posts {
 	margin: 0;
+	padding: 0;
 	position: fixed;
 	top: @margin-md;
 	right: @margin-lg;
@@ -36,14 +38,14 @@ h1.blog.progress.posts {
 
 h1.blog {
 	font-size: @font-size-lg;
-	padding: @padding-md;
+	padding: @padding-md 0 @padding-md 0;
 	display: block;
 	margin: 0;
 }
 
 p.blog.date {
 	font-size: @font-size-xs;
-	padding: @padding-sm;
+	padding: @padding-sm 0 @padding-sm 0;
 	display: block;
 	top: @margin-xs 0 @margin-xs 0;
 }
