--- a/src/style/themes/default.less
+++ b/src/style/themes/default.less
@@ -16,7 +16,7 @@
 @padding-xs: 8px;
 
 // Margins
-@margin-lg: 24px;
+@margin-lg: 30px;
 @margin-md: 16px;
 @margin-sm: 12px;
 @margin-xs: 8px;
